# vatavaran-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  log_conversation.json  log_conversation_viewer.py  openenv.yaml  pyproject.toml  run_all_tasks.py
scripts/: filter_bank_by_telemetry_day.py  process_query_csv.py  test_task_loading.py
server/: __init__.py  app.py
tests/: test_openrca_difficulty.py
vatavaran/: __init__.py  client.py  models.py  openrca_difficulty.py
vatavaran/config/: env_config.yaml  reward_config.yaml
vatavaran/data/: prepare_data.py
vatavaran/data/.ipython/profile_default/: history.sqlite
vatavaran/server/: __init__.py  app.py  code_sandbox.py  domain_knowledge.py  evaluator.py  rca_environment.py  requirements.txt  reward_engine.py
